--- a/slides/_common.qmd
+++ b/slides/_common.qmd
@@ -16,10 +16,14 @@ options(width = 60)
 
 \DeclareMathOperator*{\minimize}{minimize}
 
-\DeclareMathOperator{\E}{\mathrm{E}}
+\DeclareMathOperator{\E}{\textrm{E}}
 
 \DeclareMathOperator{\var}{Var}
 
 \DeclareMathOperator{\cov}{Cov}
+
+\DeclareMathOperator{\normal}{\mathcal{N}}
+
+\DeclareMathOperator{\uniform}{\mathcal{U}}
 
 :::
