Reset algorithm2e counters on overlay change

--- a/slides/packages.tex
+++ b/slides/packages.tex
@@ -1,6 +1,7 @@
 \usepackage{fontsetup}
 \usepackage[export]{adjustbox}
 \usepackage[ruled,vlined]{algorithm2e}
+\resetcounteronoverlays{algocf}
 \usepackage{dirtree}
 \usepackage{pdfpc}
 \usepackage{pgfplots}
